pre no longer wraps lines

--- a/base.less
+++ b/base.less
@@ -409,10 +409,6 @@ html {
   font-weight:500;
 }
 
-pre {
-  white-space:nowrap;
-}
-
 .collapsible-block {
   width: 100%;
   display: none;
